<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="license_agreement">Пользовательское соглашение</string>

    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">otsoy1995@yandex.ru</string>
    <string name="support_letter_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_letter_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="license_agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="clear">Очистить</string>
    <string name="problems_with_internet">Проблемы со связью.\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>