<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <TextView style="@style/HeaderText"
        android:id="@+id/title_text"
        android:text="@string/app_name"/>

    <Button style="@style/MainButton"
        android:id="@+id/search_button"
        android:text="@string/search"
        app:icon="@drawable/loop"/>

    <Button style="@style/MainButton"
        android:id="@+id/media_library_button"
        android:text="@string/media_library"
        app:icon="@drawable/media"/>

    <Button style="@style/MainButton"
        android:id="@+id/settings_button"
        android:text="@string/settings"
        app:icon="@drawable/settings"/>

</LinearLayout>
