<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".SettingsActivity">

    <LinearLayout style="@style/TitlePanel"
        android:id="@+id/title_panel"
        android:layout_marginBottom="@dimen/title_header_margin_bot">

        <ImageButton style="@style/TitleButton"
            android:id="@+id/settings_return_button"
            android:src="@drawable/arrow_back"
            android:layout_margin="@dimen/title_button_margin"/>

        <TextView style="@style/TitleText"
            android:text="@string/settings"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/title_text_margin_top"/>

    </LinearLayout>

    <LinearLayout style="@style/SettingsLine"
        android:id="@+id/dark_theme_settings_line"
        tools:ignore="UseSwitchCompatOrMaterialXml">

        <TextView style="@style/SettingsLineText"
            android:id="@+id/dark_theme_text"
            android:text="@string/dark_theme"/>
        
        <Switch style="@style/DarkThemeSwitch"
            android:id="@+id/dark_theme_switch"/>

    </LinearLayout>

    <LinearLayout style="@style/SettingsLine"
        android:id="@+id/share_settings_line">

        <TextView style="@style/SettingsLineText"
            android:id="@+id/share_text"
            android:text="@string/share"/>

        <ImageView style="@style/SettingsLineImage"
            android:src="@drawable/share"/>

    </LinearLayout>

    <LinearLayout style="@style/SettingsLine"
        android:id="@+id/support_settings_line">

        <TextView style="@style/SettingsLineText"
            android:id="@+id/support_text"
            android:text="@string/support"/>

        <ImageView style="@style/SettingsLineImage"
            android:src="@drawable/support"/>

    </LinearLayout>

    <LinearLayout style="@style/SettingsLine"
        android:id="@+id/license_agreement_settings_line">

        <TextView style="@style/SettingsLineText"
            android:id="@+id/license_agreement_text"
            android:text="@string/license_agreement"/>

        <ImageView style="@style/SettingsLineImage"
            android:src="@drawable/arrow_forward"/>

    </LinearLayout>

</LinearLayout>
