<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PlayerActivity">

        <ImageButton style="@style/TitleButton"
            android:id="@+id/player_return_button"
            android:src="@drawable/arrow_back"
            android:background="@null"
            android:layout_marginTop="@dimen/title_button_margin"
            android:layout_marginStart="@dimen/title_button_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/player_left_border"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/common_indent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/player_right_border"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/common_indent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/player_track_info_titles_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="trackDurationTitleTag, trackAlbumNameTitleTag,
                trackReleaseTitleTag, trackGenreTitleTag, trackCountryTitleTag"
            app:barrierDirection="end" />

        <ImageView
            android:id="@+id/player_album_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/small_padding"
            android:layout_marginTop="@dimen/center_image_margin_top"
            android:layout_marginBottom="@dimen/album_margin_bot"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_left_border"
            app:layout_constraintEnd_toStartOf="@id/player_right_border"
            tools:src="@drawable/album_default_cover"/>

        <TextView style="@style/TitleText"
            android:id="@+id/player_track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_message_text_margin"
            android:layout_marginHorizontal="@dimen/small_padding"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/player_album_cover"
            app:layout_constraintStart_toEndOf="@id/player_left_border"
            app:layout_constraintEnd_toStartOf="@id/player_right_border"
            android:textFontWeight="400"
            tools:text="My Favourite Song Name (BEST)"/>

        <TextView style="@style/UnderTitleText"
            android:id="@+id/player_artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_padding"
            android:layout_marginHorizontal="@dimen/small_padding"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/player_track_name"
            app:layout_constraintStart_toEndOf="@id/player_left_border"
            app:layout_constraintEnd_toStartOf="@id/player_right_border"
            android:textFontWeight="400"
            tools:text="The best BAND ever known"/>

        <ImageButton
            android:id="@+id/player_add_to_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_small_button_margin"
            android:layout_marginStart="@dimen/small_padding"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@id/player_artist_name"
            app:layout_constraintStart_toEndOf="@id/player_left_border"
            android:src="@drawable/add_to_playlist_button"/>

        <ImageButton
            android:id="@+id/player_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_margin_top"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@id/player_artist_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/play_button"/>

        <ImageButton
            android:id="@+id/player_add_to_favorites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_small_button_margin"
            android:layout_marginEnd="@dimen/small_padding"
            android:background="@null"
            app:layout_constraintTop_toBottomOf="@id/player_artist_name"
            app:layout_constraintEnd_toStartOf="@id/player_right_border"
            android:src="@drawable/add_to_favourite_button"/>

        <TextView style="@style/UnderTitleText"
            android:id="@+id/player_track_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/player_play_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="99:59"/>

        <TextView style="@style/PlayerTrackInfoTitle"
            android:id="@+id/player_track_duration_title"
            app:layout_constraintTag="trackDurationTitleTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_margin_top"
            app:layout_constraintTop_toBottomOf="@id/player_track_timer"
            app:layout_constraintStart_toEndOf="@id/player_left_border"
            android:text="@string/duration"/>

        <TextView style="@style/PlayerTrackInfoValue"
            android:id="@+id/player_track_duration_value"
            android:layout_marginTop="@dimen/player_margin_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/player_track_timer"
            app:layout_constraintStart_toEndOf="@id/player_track_info_titles_barrier"
            app:layout_constraintEnd_toStartOf="@id/player_right_border"
            tools:text="999:59"/>


        <TextView style="@style/PlayerTrackInfoTitle"
            android:id="@+id/player_track_album_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="trackAlbumNameTitleTag"
            android:layout_marginTop="@dimen/player_info_title_top"
            app:layout_constraintTop_toBottomOf="@id/player_track_duration_title"
            app:layout_constraintStart_toEndOf="@id/player_left_border"
            android:text="@string/album"/>

        <TextView style="@style/PlayerTrackInfoValue"
            android:id="@+id/player_track_album_value"
            app:layout_constraintTag="trackAlbumNameValueTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_info_title_top"
            app:layout_constraintTop_toBottomOf="@id/player_track_duration_value"
            app:layout_constraintStart_toEndOf="@id/player_track_info_titles_barrier"
            app:layout_constraintEnd_toStartOf="@id/player_right_border"
            tools:text="My favourite album (best of the best)"/>


        <TextView style="@style/PlayerTrackInfoTitle"
            android:id="@+id/player_track_release_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="trackReleaseTitleTag"
            android:layout_marginTop="@dimen/player_info_title_top"
            app:layout_constraintTop_toBottomOf="@id/player_track_album_title"
            app:layout_constraintStart_toEndOf="@id/player_left_border"
            android:text="@string/year"/>

        <TextView style="@style/PlayerTrackInfoValue"
            android:id="@+id/player_track_release_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_info_title_top"
            app:layout_constraintTop_toBottomOf="@id/player_track_album_value"
            app:layout_constraintStart_toEndOf="@id/player_track_info_titles_barrier"
            app:layout_constraintEnd_toStartOf="@id/player_right_border"
            tools:text="2034"/>


        <TextView style="@style/PlayerTrackInfoTitle"
            android:id="@+id/player_track_genre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="trackGenreTitleTag"
            android:layout_marginTop="@dimen/player_info_title_top"
            app:layout_constraintTop_toBottomOf="@id/player_track_release_title"
            app:layout_constraintStart_toEndOf="@id/player_left_border"
            android:text="@string/genre"/>

        <TextView style="@style/PlayerTrackInfoValue"
            android:id="@+id/player_track_genre_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_info_title_top"
            app:layout_constraintTop_toBottomOf="@id/player_track_release_value"
            app:layout_constraintStart_toEndOf="@id/player_track_info_titles_barrier"
            app:layout_constraintEnd_toStartOf="@id/player_right_border"
            tools:text="Random genre for everyone"/>


        <TextView style="@style/PlayerTrackInfoTitle"
            android:id="@+id/player_track_country_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTag="trackCountryTitleTag"
            android:layout_marginTop="@dimen/player_info_title_top"
            android:layout_marginBottom="@dimen/player_margin_bot"
            app:layout_constraintTop_toBottomOf="@+id/player_track_genre_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_left_border"
            android:text="@string/country"/>

        <TextView style="@style/PlayerTrackInfoValue"
            android:id="@+id/player_track_country_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_info_title_top"
            android:layout_marginBottom="@dimen/player_margin_bot"
            app:layout_constraintTop_toBottomOf="@+id/player_track_genre_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_track_info_titles_barrier"
            app:layout_constraintEnd_toStartOf="@id/player_right_border"
            tools:text="Random country of pleasure"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/player_album_name_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_tags="trackAlbumNameTitleTag,
                trackAlbumNameValueTag" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>